# moony-tauri

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.agent/rules/: development-standards.md  rules.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-check.yml  release.yml
.husky/: pre-commit
docs/: Categorization.md  UPDATING.md  training_guide.md
scripts/: migrate-neondb.mjs  migration.sql
shared/: currencies.test.ts  currencies.ts  generated-types.ts  schema.ts
shared/calculations/: change-metrics.ts  crypto-metrics.ts  holding-metrics.ts  index.ts  portfolio-metrics.ts  realized-gains.ts  yield-metrics.ts
shared/types/: extended-types.ts  index.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  clippy_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  constants.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  bank_accounts.rs  bonds.rs  budgeting.rs  cashflow.rs  categorization.rs  crypto.rs  export.rs  insurance.rs  investments.rs  loans.rs  mod.rs  other_assets.rs  portfolio.rs  price_api.rs  projection.rs  real_estate.rs  savings.rs  stock_tags.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: bank_accounts.rs  bank_transactions.rs  bonds.rs  budgeting.rs  cashflow.rs  crypto.rs  insurance.rs  investments.rs  loans.rs  mod.rs  other_assets.rs  projection.rs  real_estate.rs  savings.rs  stock_tags.rs  user.rs
src-tauri/src/services/: auth.rs  bank_accounts.rs  budgeting.rs  crypto.rs  crypto_investments.rs  csv_import.rs  currency.rs  date_parser.rs  investments.rs  local_api.rs  mod.rs  price_api.rs  pricing.rs
src-tauri/src/services/categorization/: default_rules.rs  engine.rs  exact_match.rs  fio_scraper.rs  ml_classifier.rs  mod.rs  rules.rs  tokenizer.rs  training_data.rs  types.rs
src/components/: AddCashflowItemDialog.tsx  AddCryptoModal.tsx  AddInvestmentModal.tsx  AssetAllocationChart.tsx  AssetAllocationDonut.tsx  AssetLogo.tsx  AssetsLiabilitiesChart.tsx  BondsFormDialog.tsx  BondsSummary.tsx  BondsTable.tsx  BuyCryptoModal.tsx  BuyInvestmentModal.tsx  CashflowViewSelector.tsx  CryptoSummary.tsx  CryptoTable.tsx  CryptoTransactionsModal.tsx  DeleteInstrumentDialog.tsx  DeleteLoanDialog.tsx  EditTransactionModal.tsx  ErrorBoundary.tsx  ImportInvestmentsModal.tsx  InsuranceCard.tsx  InvestmentsSummary.tsx  InvestmentsTable.tsx  LoanFormDialog.tsx  LoansSummary.tsx  LoansTable.tsx  MiniAssetCard.tsx  NetWorthTrendChart.tsx  SavingsAccountCard.tsx  SavingsAccountFormDialog.tsx  SavingsAccountZoneManager.tsx  SavingsAccountsSummary.tsx  SavingsAccountsTable.tsx  SellCryptoModal.tsx  SellInvestmentModal.tsx  SummaryCard.tsx  ThemeToggle.tsx  TimePeriodSelector.tsx  UpdateCryptoPriceModal.tsx  (+4 more)
src/contexts/: theme-context.ts
src/hooks/: SyncProvider.tsx  sync-context.ts  use-auth.tsx  use-bank-account-mutations.ts  use-bank-accounts.ts  use-bond-mutations.ts  use-bonds.ts  use-finance-data.ts  use-instrument-mutations.ts  use-investments.ts  use-loan-mutations.ts  use-loans.ts  use-savings-account-mutations.ts  use-savings-accounts.ts  use-theme.ts  use-updater.tsx  useBonds.ts  useCategorization.ts  useLoans.ts  useSavingsAccountMutations.ts  useSavingsAccounts.ts
src/i18n/: I18nProvider.tsx  index.ts
src/lib/: analytics.ts  currency.tsx  protected-route.tsx  queryClient.ts  tauri-api.ts  translate-api-error.ts
src/pages/: Accounts.tsx  AnnuityCalculator.tsx  BankAccountDetail.tsx  BankAccounts.tsx  Bonds.tsx  Budgeting.tsx  Cashflow.tsx  CategorizationRules.tsx  Crypto.tsx  CryptoDetail.tsx  (+15 more)
(+173 files in other folders)
